export const snapshot = {};

snapshot[`snapshot: garden 1`] = `
{
  blocks: {
    "codeBlockWithId#^f3edfd": "<pre><code>*🍎: Low-hanging fruit (easy and fast to complete)
*⛰️: Medium Difficulty
*🌀: Complex (may take longer to implement)
*❓: Optional (unsure if this will be a final feature)
*🔑: Key feature
</code></pre>",
    "imageWithId#^be171d": 'Image<br><img src="/Assets/bumblebee.gif"> ',
    "linesOfTextWithId#^8fb9e2": "Line of Text<br>Checkout [[Features]] to see what it can do and what it's going to do!  ",
    "listWithId#^6cc5d9": "Apple ",
    "listWithId#^993417": "Wisdom ",
  },
  pages: [
    {
      blockEmbeds: [],
      contents: "More text comes before. ignore this

Code block
\`\`\`
*🍎: Low-hanging fruit (easy and fast to complete)
*⛰️: Medium Difficulty
*🌀: Complex (may take longer to implement)
*❓: Optional (unsure if this will be a final feature)
*🔑: Key feature
\`\`\`

^f3edfd

More text comes after. ignore this
",
      createdAt: 1693922315418,
      metadata: null,
      modifiedAt: 1693922490903,
      name: "codeBlockWithId",
      webPath: "/embedBlocks/codeBlockWithId.html",
    },
    {
      blockEmbeds: [
        "codeBlockWithId#^f3edfd",
      ],
      contents: "\`eden-embedcodeBlockWithId#^f3edfd\`",
      createdAt: 1693922315418,
      metadata: null,
      modifiedAt: 1693922510399,
      name: "embedCodeBlock",
      webPath: "/embedBlocks/embedCodeBlock.html",
    },
    {
      blockEmbeds: [
        "imageWithId#^be171d",
      ],
      contents: "\`eden-embedimageWithId#^be171d\`",
      createdAt: 1693922536001,
      metadata: null,
      modifiedAt: 1693922550017,
      name: "embedImage",
      webPath: "/embedBlocks/embedImage.html",
    },
    {
      blockEmbeds: [
        "linesOfTextWithId#^8fb9e2",
      ],
      contents: "\`eden-embedlinesOfTextWithId#^8fb9e2\`",
      createdAt: 1693922553624,
      metadata: null,
      modifiedAt: 1693922567317,
      name: "embedLinesOfText",
      webPath: "/embedBlocks/embedLinesOfText.html",
    },
    {
      blockEmbeds: [
        "listWithId#^993417",
      ],
      contents: "\`eden-embedlistWithId#^993417\`",
      createdAt: 1693922572679,
      metadata: null,
      modifiedAt: 1693922598256,
      name: "embedList",
      webPath: "/embedBlocks/embedList.html",
    },
    {
      blockEmbeds: [],
      contents: 'More text comes before. ignore this

Image
![A bee harvesting pollen](/Assets/bumblebee.gif "A bee harvesting pollen") ^be171d

More text comes after. ignore this',
      createdAt: 1693922379814,
      metadata: null,
      modifiedAt: 1693922393520,
      name: "imageWithId",
      webPath: "/embedBlocks/imageWithId.html",
    },
    {
      blockEmbeds: [],
      contents: "More text comes before. ignore this

Line of Text
Checkout [[Features]] to see what it can do and what it's going to do!  ^8fb9e2

More text comes after. ignore this",
      createdAt: 1693922353408,
      metadata: null,
      modifiedAt: 1693922368064,
      name: "linesOfTextWithId",
      webPath: "/embedBlocks/linesOfTextWithId.html",
    },
    {
      blockEmbeds: [],
      contents: 'More text comes before. ignore this

List
- Wisdom ^993417
	- Apple ^6cc5d9
	- Orange [Google](https://google.com)
	- Pear

- This line must be present because somehow it causes the previous "- Wisdom" line to be wrapped in a \`<p>\` which interferes with the embedding. I may just have to replace the markdown parser

More text comes after. ignore this',
      createdAt: 1693831759468,
      metadata: null,
      modifiedAt: 1693922405824,
      name: "listWithId",
      webPath: "/embedBlocks/listWithId.html",
    },
  ],
  tags: Set(0) {},
}
`;

snapshot[`snapshot: /embedBlocks/codeBlockWithId.html 1`] = `
'<html><head></head><body><p>More text comes before. ignore this</p>
<p>Code block</p>
<pre id="f3edfd"><code>*🍎: Low-hanging fruit (easy and fast to complete)
*⛰️: Medium Difficulty
*🌀: Complex (may take longer to implement)
*❓: Optional (unsure if this will be a final feature)
*🔑: Key feature
</code></pre>
<p>^f3edfd</p>
<p>More text comes after. ignore this</p>
</body></html>'
`;

snapshot[`snapshot: /embedBlocks/embedCodeBlock.html 1`] = `
'<html><head></head><body><p></p><div>
            <div class="embed-block">
            <pre><code>*🍎: Low-hanging fruit (easy and fast to complete)
*⛰️: Medium Difficulty
*🌀: Complex (may take longer to implement)
*❓: Optional (unsure if this will be a final feature)
*🔑: Key feature
</code></pre>
              
            <div>
            <a href="/embedBlocks/codeBlockWithId.html#f3edfd" class="feint-link"> codeBlockWithId#^f3edfd </a>
            </div>
              
            </div>
              </div><p></p>
</body></html>'
`;

snapshot[`snapshot: /embedBlocks/embedImage.html 1`] = `
'<html><head></head><body><p></p><div>
            <div class="embed-block">
            Image<br><img src="/Assets/bumblebee.gif"> 
              
            <div>
            <a href="/embedBlocks/imageWithId.html#be171d" class="feint-link"> imageWithId#^be171d </a>
            </div>
              
            </div>
              </div><p></p>
</body></html>'
`;

snapshot[`snapshot: /embedBlocks/embedLinesOfText.html 1`] = `
\`<html><head></head><body><p></p><div>
            <div class="embed-block">
            Line of Text<br>Checkout [[Features]] to see what it can do and what it's going to do!  
              
            <div>
            <a href="/embedBlocks/linesOfTextWithId.html#8fb9e2" class="feint-link"> linesOfTextWithId#^8fb9e2 </a>
            </div>
              
            </div>
              </div><p></p>
</body></html>\`
`;

snapshot[`snapshot: /embedBlocks/embedList.html 1`] = `
'<html><head></head><body><p></p><div>
            <div class="embed-block">
            <ul>
            <li>
            <p id="993417">Wisdom ^993417</p>
            <ul>
            <li id="6cc5d9">Apple ^6cc5d9</li>
            <li>Orange <a href="https://google.com"><img class="inline-icon" src="https://s2.googleusercontent.com/s2/favicons?domain=https://google.com">Google</a></li>
            <li>Pear</li>
            </ul>
            </li>
            <li>
            <p>This line must be present because somehow it causes the previous "- Wisdom" line to be wrapped in a <code>&lt;p&gt;</code> which interferes with the embedding. I may just have to replace the markdown parser</p>
            </li>
            </ul>
              
            <div>
            <a href="/embedBlocks/listWithId.html#993417" class="feint-link"> listWithId#^993417 </a>
            </div>
              
            </div>
              </div><p></p>
</body></html>'
`;

snapshot[`snapshot: /embedBlocks/imageWithId.html 1`] = `
'<html><head></head><body><p>More text comes before. ignore this</p>
<p id="be171d">Image<br><img src="/Assets/bumblebee.gif"> ^be171d</p>
<p>More text comes after. ignore this</p>
</body></html>'
`;

snapshot[`snapshot: /embedBlocks/linesOfTextWithId.html 1`] = `
\`<html><head></head><body><p>More text comes before. ignore this</p>
<p id="8fb9e2">Line of Text<br>Checkout [[Features]] to see what it can do and what it's going to do!  ^8fb9e2</p>
<p>More text comes after. ignore this</p>
</body></html>\`
`;

snapshot[`snapshot: /embedBlocks/listWithId.html 1`] = `
'<html><head></head><body><p>More text comes before. ignore this</p>
<p>List</p>
<ul>
<li>
<p id="993417">Wisdom ^993417</p>
<ul>
<li id="6cc5d9">Apple ^6cc5d9</li>
<li>Orange <a href="https://google.com"><img class="inline-icon" src="https://s2.googleusercontent.com/s2/favicons?domain=https://google.com">Google</a></li>
<li>Pear</li>
</ul>
</li>
<li>
<p>This line must be present because somehow it causes the previous "- Wisdom" line to be wrapped in a <code>&lt;p&gt;</code> which interferes with the embedding. I may just have to replace the markdown parser</p>
</li>
</ul>
<p>More text comes after. ignore this</p>
</body></html>'
`;
